monitoring/master/mail-server/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mail-server
  namespace: monitoring
  name: mail-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-server
  template:
    metadata:
      labels:
        app: mail-server
    spec:
      containers:
      - image: reachfive/fake-smtp-server
        name: mail-server
        ports:
        - name: "smtp"
          containerPort: 1025
          protocol: TCP
        - name: "http" 
          containerPort: 1080
          protocol: TCP
        resources: {}
