monitoring/master/mail-server/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mail-server
  name: mail-server
  namespace: monitoring
  
spec:
  ports:
  - name: "smtp"
    port: 1025
    protocol: TCP
    targetPort: "smtp"
  - name: "http"
    port: 1080
    protocol: TCP
    targetPort: "http"
  selector:
    app: mail-server
