monitoring/master/mail-server/ingress.yml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: mail-server
  namespace: monitoring
spec:
  rules:
  - host: mail-server.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mail-server
            port:
              number: 1080
